--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.4",
     "ts-node": "^8.3.0",
-    "typescript": "^3.9.7"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.0.0 || ^7.0.0",
-    "@nestjs/core": "^6.0.0 || ^7.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0"
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0"
   },
   "dependencies": {
     "@nestjs/testing": "^7.3.2",
