--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@digikare/nestjs-prom",
-  "version": "1.0.0",
+  "name": "@afsalk/nestjs-prom",
+  "version": "1.0.1",
   "description": "A promotheus module for nestjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,18 +19,18 @@
   "author": "Tieu-Philippe KHIM <pkhim@digikare.com>",
   "license": "MIT",
   "devDependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.3.2",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/platform-express": "^10.1.3",
     "@types/jest": "^26.0.7",
-    "@types/node": "^12.12.53",
+    "@types/node": "^20.5.0",
     "@types/response-time": "^2.3.4",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.1.0",
+    "jest": "^29.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.0",
+    "rxjs": "^7.0.0",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.4",
+    "ts-jest": "^29.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^5.1.6"
   },
@@ -41,8 +41,8 @@
     "rxjs": "^7.0.0"
   },
   "dependencies": {
-    "@nestjs/testing": "^7.3.2",
-    "prom-client": "^12.0.0",
+    "@nestjs/testing": "^10.1.3",
+    "prom-client": "^14.2.0",
     "response-time": "^2.3.2",
     "url-value-parser": "^2.0.1"
   },
